--- a/PA1_template.html
+++ b/PA1_template.html
@@ -152,7 +152,7 @@ StepsPerDay &lt;-
 mean.StepsPerDay &lt;- round(mean(StepsPerDay), 0)
 median.StepsPerDay &lt;- median(StepsPerDay)
 
-# histogram of the total number of steps taken each day
+# histogram of the total number of steps that are taken each day
 par(mar = c(4, 4, 2, 0.1))
 hist(StepsPerDay, breaks = 10,
      xlab = &quot;Steps per day&quot;,
